--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -4,11 +4,53 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./Imgs/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
   <script defer src="code.js"></script>
   <title>Landing Page</title>
 </head>
 <body>
-  
+  <header class="header">
+    <nav class="nav">
+      <div class="logoContainer">
+        <h2 class="logoTitle">
+          Curso CSS
+        </h2>
+      </div>
+
+      <ul class="navlinkContainer navLinkMenu">
+        <li class="navItem">
+          <a class="navLink" href="#">Home</a>
+        </li>
+        <li class="navItem">
+          <a class="navLink" href="#">About</a>
+        </li>
+        <li class="navItem">
+          <a class="navLink" href="#">Contact</a>
+        </li>
+        <li class="navItem">
+          <a class="navLink" href="#">Blog</a>
+        </li>
+
+        <i class='navClose bx bxs-x-circle'></i>
+      </ul>
+      <div class="navMenu">
+        <i class='navIMG bx bx-menu' ></i>
+      </div>
+
+    </nav>
+    <section class="container">
+      <h1 class="title">Aprende CSS desde Cero hasta dominarlo</h1>
+      <p class="paragraph">
+        Elige aprender CSS de una vez por todas, una vez que termines este curso seras capaz de crear cuaquier layout con CSS y crear tus propias animaciones.
+      </p>
+      <a href="#" class="startNow">Comienza ahora</a>
+    </section>
+  </header>
+
+
+
+
 </body>
 </html>
