--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -85,7 +85,18 @@
                 </article> 
             </section>
         </section>
-        
+        <section class="knowledge">
+            <div class="knowledgeContainer">
+                <div class="knowledgeTexts">
+                    <h2 class="knowledgeSubTitle">Curso completo de CSS. Domina CSS de una vez por todas</h2>
+                    <p class="knowledgeParagraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos facilis accusantium eum doloremque illum, ex earum maxime ullam ipsam porro quis voluptate labore, enim eius, iste voluptatem dolorem provident quod!</p>
+                    <a href="#" class="startNow">Entra al curso</a>
+                </div>
+                <figure class="knowledgePicture">
+                    <img src="./Imgs/computer.jpg" class="knowledgeIMG" alt="">
+                </figure>
+            </div>
+        </section>
     </main>
 
 
