Style about section

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -56,12 +56,13 @@
     <main>
 
         <section class="aboutContainer">
-            <h2 class="aboutTitle">Que aprenderas en este curso</h2>
+            <h2 class="aboutContainerTitle">Que aprenderas en este curso</h2>
             <p class="aboutParagraph">Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties, Position, Animaciones, Box Model y mas)</p>
 
             <section class="aboutMain">
+
                 <article class="aboutIcons">
-                    <i class='bx bx-layout'></i>
+                    <i class='aboutIconIMG bx bx-layout'></i>
                     <h3 class="aboutTitle">CSS Layout</h3>
                     <p class="aboutParagraph"> 
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit rerum fugit dignissimos! 
@@ -69,16 +70,16 @@
                 </article>
     
                 <article class="aboutIcons">
-                    <i class='bx bx-paint'></i>
-                    <h3 class="aboutTitle">CSS Layout</h3>
+                    <i class='aboutIconIMG bx bx-paint'></i>
+                    <h3 class="aboutTitle">Animaciones</h3>
                     <p class="aboutParagraph"> 
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit rerum fugit dignissimos! 
                     </p>
                 </article>
     
                 <article class="aboutIcons">
-                    <i class='bx bx-code'></i>
-                    <h3 class="aboutTitle">CSS Layout</h3>
+                    <i class='aboutIconIMG bx bx-code'></i>
+                    <h3 class="aboutTitle">Sass</h3>
                     <p class="aboutParagraph"> 
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit rerum fugit dignissimos! 
                     </p>
