Testimony section structure

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -145,9 +145,66 @@
                 </div>
         </section>
 
+<!-- ---------------------- Testimony --------------------- -->
+
+        <section class="testimonySection">
+            <div class="testimonyContainer">
+
+                <i id="leftArrow" class='bx bxs-chevron-left'></i>
+
+                <section class="testimonyBody testimonyBodyShow" data-id="1">
+                    <div class="testimonyTexts">
+                        <h2 class="sectionTitle">Mi nombre es Yakelin Cortez, 
+                            <span class="testimonyCourse">
+                                estudiante de CSS
+                            </span>
+                        </h2>
+                        <p class="testimonyReview">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus minima tempore ipsum, dolore similique.
+                        </p>
+                    </div>
+                    <figure class="testimonyPicture">
+                        <img src="./Imgs/face1.jpg" class="testimonyIMG">
+                    </figure>
+                </section>
+
+                <section class="testimonyBody " data-id="2">
+                    <div class="testimonyTexts">
+                        <h2 class="sectionTitle">Mi nombre es Rodrigo Lopez, 
+                            <span class="testimonyCourse">
+                                estudiante de CSS
+                            </span>
+                        </h2>
+                        <p class="testimonyReview">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus minima tempore ipsum, dolore similique.
+                        </p>
+                    </div>
+                    <figure class="testimonyPicture">
+                        <img src="./Imgs/face2.jpg" class="testimonyIMG">
+                    </figure>
+                </section>
+
+                <section class="testimonyBody " data-id="3">
+                    <div class="testimonyTexts">
+                        <h2 class="sectionTitle">Mi nombre es Antonio Nieto, 
+                            <span class="testimonyCourse">
+                                estudiante de CSS
+                            </span>
+                        </h2>
+                        <p class="testimonyReview">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus minima tempore ipsum, dolore similique.
+                        </p>
+                    </div>
+                    <figure class="testimonyPicture">
+                        <img src="./Imgs/face3.jpg" class="testimonyIMG">
+                    </figure>
+                </section>
 
 
 
+                <i id="rightArrow" class='bx bxs-chevron-right' ></i>
+            </div>
+        </section>
 
 
 
