Testimony slider done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -200,6 +200,22 @@
                     </figure>
                 </section>
 
+                <section class="testimonyBody " data-id="4">
+                    <div class="testimonyTexts">
+                        <h2 class="sectionTitle">Mi nombre es Rosario Ayala, 
+                            <span class="testimonyCourse">
+                                estudiante de CSS
+                            </span>
+                        </h2>
+                        <p class="testimonyReview">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus minima tempore ipsum, dolore similique.
+                        </p>
+                    </div>
+                    <figure class="testimonyPicture">
+                        <img src="./Imgs/face4.jpg" class="testimonyIMG">
+                    </figure>
+                </section>
+
 
 
                 <i id="rightArrow" class='bx bxs-chevron-right' ></i>
