Question section structure

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -222,6 +222,32 @@
             </div>
         </section>
 
+<!-- ---------------------- Testimony --------------------- -->
+
+        <section class="questionContainer">
+            <h2 class="sectionTitle">
+                Preguntas frecuentes
+            </h2>
+            <p class="questionParagraph">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aperiam laborum odit tenetur sunt minus.
+            </p>
+
+            <section class="questionContainer">
+                <article class="questionPadding">
+                    <div class="questionAnswer">
+                        <h3 class="questionTitle">
+                            Que es CSS?
+                            <span class="questionArrow">
+                                <i id="testimonyIMG" class='bx bxs-chevron-left'></i>
+                            </span>
+                        </h3>
+                        <p class="questionShow">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repudiandae, voluptates minima eaque asperiores ipsa totam consequuntur perspiciatis modi fugiat doloremque optio neque quam debitis alias necessitatibus quidem exercitationem soluta?
+                        </p>
+                    </div>
+                </article>
+            </section>
+        </section>
 
 
     </main>
