--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -246,6 +246,33 @@
                         </p>
                     </div>
                 </article>
+                <article class="questionPadding">
+                    <div class="questionAnswer">
+                        <h3 class="questionTitle">
+                            Que es CSS?
+                            <span class="questionArrow">
+                                <i id="testimonyIMG" class='bx bxs-chevron-left'></i>
+                            </span>
+                        </h3>
+                        <p class="questionShow">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repudiandae, voluptates minima eaque asperiores ipsa totam consequuntur perspiciatis modi fugiat doloremque optio neque quam debitis alias necessitatibus quidem exercitationem soluta?
+                        </p>
+                    </div>
+                </article>
+                <article class="questionPadding">
+                    <div class="questionAnswer">
+                        <h3 class="questionTitle">
+                            Que es CSS?
+                            <span class="questionArrow">
+                                <i id="testimonyIMG" class='bx bxs-chevron-left'></i>
+                            </span>
+                        </h3>
+                        <p class="questionShow">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repudiandae, voluptates minima eaque asperiores ipsa totam consequuntur perspiciatis modi fugiat doloremque optio neque quam debitis alias necessitatibus quidem exercitationem soluta?
+                        </p>
+                    </div>
+                </article>
+                
             </section>
         </section>
 
