Question section style done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -224,7 +224,7 @@
 
 <!-- ---------------------- Testimony --------------------- -->
 
-        <section class="questionContainer">
+        <section class="Question Container">
             <h2 class="sectionTitle">
                 Preguntas frecuentes
             </h2>
@@ -233,12 +233,14 @@
             </p>
 
             <section class="questionContainer">
+
                 <article class="questionPadding">
                     <div class="questionAnswer">
                         <h3 class="questionTitle">
                             Que es CSS?
                             <span class="questionArrow">
-                                <i id="testimonyIMG" class='bx bxs-chevron-left'></i>
+                                <i id="questionIMG" class='bx bxs-chevron-up'></i>
+                              
                             </span>
                         </h3>
                         <p class="questionShow">
@@ -246,12 +248,13 @@
                         </p>
                     </div>
                 </article>
+
                 <article class="questionPadding">
                     <div class="questionAnswer">
                         <h3 class="questionTitle">
-                            Que es CSS?
+                            Que aprendere en este curso
                             <span class="questionArrow">
-                                <i id="testimonyIMG" class='bx bxs-chevron-left'></i>
+                                <i id="questionIMG" class='bx bxs-chevron-up'></i>
                             </span>
                         </h3>
                         <p class="questionShow">
@@ -259,12 +262,13 @@
                         </p>
                     </div>
                 </article>
+
                 <article class="questionPadding">
                     <div class="questionAnswer">
                         <h3 class="questionTitle">
-                            Que es CSS?
+                            Que es CSS GRID?
                             <span class="questionArrow">
-                                <i id="testimonyIMG" class='bx bxs-chevron-left'></i>
+                                <i id="questionIMG" class='bx bxs-chevron-up'></i>
                             </span>
                         </h3>
                         <p class="questionShow">
@@ -272,7 +276,7 @@
                         </p>
                     </div>
                 </article>
-                
+
             </section>
         </section>
 
