Start section structure

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -222,7 +222,7 @@
             </div>
         </section>
 
-<!-- ---------------------- Testimony --------------------- -->
+<!-- ---------------------- Question --------------------- -->
 
         <section class="Question Container">
             <h2 class="sectionTitle">
@@ -278,7 +278,20 @@
                 </article>
 
             </section>
+
+            <section class="startContainer">
+                <h3 class="sectionTitle">Estas listo para aprender CSS
+
+                </h3>
+                <p class="startParagraph">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam id perferendis doloremque impedit quia unde magnam, recusandae consequatur ad placeat mollitia sapiente fugit natus, odit nisi doloribus nam, voluptatibus rem?
+                </p>
+                <a class="startNow">
+                    Entrar ahora
+                </a>
+            </section>
         </section>
+
 
 
     </main>
