Footer section structure

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -292,7 +292,39 @@
             </section>
         </section>
 
+<!-- ---------------------- Footer --------------------- -->
 
+        <section class="footer">
+            <section class="footerHead">
+                <article class="LinksContainer">
+                    <h3 class="linksTitle">Curso de CSS</h3>
+                    <div class="links">
+                        <a href="#">Inicio</a>
+                        <a href="#">Acerca de</a>
+                        <a href="#">Contacto</a>
+                        <a href="#">Blog</a>
+                    </div>
+                </article>
+                <article class="subscribeContainer">
+                    <h3 class="subscribeTitle">Suscribite a la newsletter</h3>
+                    <form class="subscribeForm">
+                        <input type="text" placeholder="Email">
+                        <button>Registrate</button>
+                    </form>
+                </article>
+            </section>
+            <section class="socialNetwork">
+                <div class="iconsContainer">
+                    <i class='bx bxl-facebook'></i>
+                    <i class='bx bxl-twitter' ></i>
+                    <i class='bx bxl-youtube' ></i>
+
+                </div>
+                <h3 class="copyRights">
+                    Derechos reservador &#169; Francisco Cortez
+                </h3>
+            </section>
+        </section>
 
     </main>
 
