Footer style done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -297,31 +297,39 @@
         <section class="footer">
             <section class="footerHead">
                 <article class="LinksContainer">
-                    <h3 class="linksTitle">Curso de CSS</h3>
+                    <h3 class="sectionTitle linksTitle">Cursos de CSS</h3>
                     <div class="links">
-                        <a href="#">Inicio</a>
-                        <a href="#">Acerca de</a>
-                        <a href="#">Contacto</a>
-                        <a href="#">Blog</a>
+                        <a class="link" href="#">
+                            Inicio
+                        </a>
+                        <a class="link" href="#">
+                            Acerca de
+                        </a>
+                        <a class="link" href="#">
+                            Contacto
+                        </a>
+                        <a class="link" href="#">
+                            Blog
+                        </a>
                     </div>
                 </article>
                 <article class="subscribeContainer">
-                    <h3 class="subscribeTitle">Suscribite a la newsletter</h3>
+                    <h3 class="subscribeTitle">Suscribete a la newsletter</h3>
                     <form class="subscribeForm">
-                        <input type="text" placeholder="Email">
-                        <button>Registrate</button>
+                        <input class="inputNewsletter" type="text" placeholder="Email">
+                        <button class="btnNewsletter">Registrate</button>
                     </form>
                 </article>
             </section>
             <section class="socialNetwork">
                 <div class="iconsContainer">
-                    <i class='bx bxl-facebook'></i>
-                    <i class='bx bxl-twitter' ></i>
-                    <i class='bx bxl-youtube' ></i>
+                    <i id="icon" class='bx bxl-facebook'></i>
+                    <i id="icon" class='bx bxl-twitter' ></i>
+                    <i id="icon" class='bx bxl-youtube' ></i>
 
                 </div>
                 <h3 class="copyRights">
-                    Derechos reservador &#169; Francisco Cortez
+                    Derechos reservados &#169; Francisco Cortez
                 </h3>
             </section>
         </section>
