Hamburger Menu done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -21,7 +21,7 @@
                 <h2 class="logoTitle">Curso CSS</h2>
             </div>
 
-            <ul class="navlinkContainer navLinkMenu">
+            <ul class="navlinkContainer">
                 <li class="navItem">
                     <a class="navLink" href="#">Home</a>
                 </li>
@@ -38,8 +38,8 @@
                 <i id="navClose" class="bx bxs-x-circle"></i>
 
             </ul>
-            <div class="navMenu">
-                <i class="bx bx-menu navIMG"></i>
+            <div class="navMenuContainer">
+                <i id="navMenu" class="bx bx-menu navIMG"></i>
             </div>
         </nav>
 
