--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link rel="shortcut icon" href="./Imgs/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
@@ -23,16 +24,22 @@
 
             <ul class="navlinkContainer">
                 <li class="navItem">
-                    <a class="navLink" href="#">Home</a>
+                    <a class="navLink" href="#Home">Home</a>
                 </li>
                 <li class="navItem">
-                    <a class="navLink" href="#">About</a>
+                    <a class="navLink" href="#About">About</a>
                 </li>
                 <li class="navItem">
-                    <a class="navLink" href="#">Contact</a>
+                    <a class="navLink" href="#Knowledge">Knowledge</a>
                 </li>
                 <li class="navItem">
-                    <a class="navLink" href="#">Blog</a>
+                    <a class="navLink" href="#Prices">Prices</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="#Testimony">Testimony</a>
+                </li>
+                <li class="navItem">
+                    <a class="navLink" href="#Questions">Questions</a>
                 </li>
 
                 <i id="navClose" class="bx bxs-x-circle"></i>
@@ -43,7 +50,7 @@
             </div>
         </nav>
 
-        <section class="container">
+        <section class="container" id="Home">
             <h1 class="title">Aprende CSS desde Cero hasta dominarlo</h1>
             <p class="paragraph">
                 Elige aprender CSS de una vez por todas, una vez que termines este
@@ -52,11 +59,12 @@
             </p>
             <a href="#" class="startNow">Comienza ahora</a>
         </section>
+        
     </header>
 
     <main>
 <!-- ---------------------- About --------------------- -->
-        <section class="aboutContainer">
+        <section id="About" class="aboutContainer">
             <h2 class="sectionTitle">Que aprenderas en este curso</h2>
             <p class="aboutParagraph">Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties, Position, Animaciones, Box Model y mas)</p>
 
@@ -89,7 +97,7 @@
         </section>
 
 <!-- ---------------------- Knowledge --------------------- -->
-        <section class="knowledge">
+        <section id="Knowledge" class="knowledge">
             <div class="knowledgeContainer">
                 <div class="knowledgeTexts">
                     <h2 class="sectionTitle">Curso completo de CSS. Domina CSS de una vez por todas</h2>
@@ -104,7 +112,7 @@
 
 <!-- ---------------------- Prices --------------------- -->
 
-        <section class="priceContainer">
+        <section id="Prices" class="priceContainer">
             <h2 class="sectionTitle">Obten el plan perfecto para aprender</h2>
                 <div class="priceTable">
                     <div class="priceElement">
@@ -147,7 +155,7 @@
 
 <!-- ---------------------- Testimony --------------------- -->
 
-        <section class="testimonySection">
+        <section id="Testimony" class="testimonySection">
             <div class="testimonyContainer">
 
                 <i id="leftArrow" class='bx bxs-chevron-left'></i>
@@ -224,7 +232,7 @@
 
 <!-- ---------------------- Question --------------------- -->
 
-        <section class="Question Container">
+        <section id="Questions" class="Question Container">
             <h2 class="sectionTitle">
                 Preguntas frecuentes
             </h2>
