--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -59,7 +59,9 @@
             </p>
             <a href="#" class="startNow">Comienza ahora</a>
         </section>
-        
+        <div class="btnUpContainer">
+            <i id="btnUP" class='bx bx-chevron-up'></i>
+        </div>
     </header>
 
     <main>
