--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet" />
     <script defer src="code.js"></script>
-    <title>Landing Page</title>
+    <title>Dental Clinic</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 
         <nav class="nav">
             <div class="logoContainer">
-                <h2 class="logoTitle">Curso CSS</h2>
+                <h2 class="logoTitle">Dental Clinic</h2>
             </div>
 
             <ul class="navlinkContainer">
@@ -30,7 +30,7 @@
                     <a class="navLink" href="#About">About</a>
                 </li>
                 <li class="navItem">
-                    <a class="navLink" href="#Knowledge">Knowledge</a>
+                    <a class="navLink" href="#Knowledge">Services</a>
                 </li>
                 <li class="navItem">
                     <a class="navLink" href="#Prices">Prices</a>
@@ -51,13 +51,11 @@
         </nav>
 
         <section class="container" id="Home">
-            <h1 class="title">Aprende CSS desde Cero hasta dominarlo</h1>
+            <h1 class="title">Improve your dental health</h1>
             <p class="paragraph">
-                Elige aprender CSS de una vez por todas, una vez que termines este
-                curso seras capaz de crear cuaquier layout con CSS y crear tus propias
-                animaciones.
+                We offer our patients our exclusive dental implant service. We use the most advanced techniques to ensure the highest quality in our treatments.
             </p>
-            <a href="#" class="startNow">Comienza ahora</a>
+            <a href="#" class="startNow">Contact us now</a>
         </section>
         <div class="btnUpContainer">
             <i id="btnUP" class='bx bx-chevron-up'></i>
