Service section done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -84,35 +84,38 @@
             </div>
         </section>
 
-        <!-- ---------------------- Knowledge --------------------- -->
+        <!-- ---------------------- Services --------------------- -->
         <section id="Services" class="aboutContainer">
-            <h2 class="sectionTitle">Que aprenderas en este curso</h2>
-            <p class="aboutParagraph">Todo lo necesario y obligatorio de CSS, (Flexbox, Grid, Custom properties,
-                Position, Animaciones, Box Model y mas)</p>
+            <h2 class="sectionTitle">
+                We offer a full range of cosmetic services for your oral care
+            </h2>
+            <p class="aboutParagraph">
+                Our office combines state-of-the-art technology with traditional dentistry so we can enhance patients' smiles with conservative, non-invasive procedures.
+            </p>
 
             <section class="aboutMain">
 
                 <article class="aboutIcons">
-                    <i class='aboutIconIMG bx bx-layout'></i>
-                    <h3 class="aboutTitle">CSS Layout</h3>
+                    <img src="imgs/plastic.png" alt="Plastic surgery" class="aboutIconIMG">
+                    <h3 class="aboutTitle">Plastic surgery</h3>
                     <p class="aboutParagraph">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit rerum fugit dignissimos!
+                        Aesthetic dentistry could be defined as an application of art and science aimed at developing or enhancing beauty in the form of a smile.
                     </p>
                 </article>
 
                 <article class="aboutIcons">
-                    <i class='aboutIconIMG bx bx-paint'></i>
-                    <h3 class="aboutTitle">Animaciones</h3>
+                    <img src="imgs/reconstructive.png" alt="Reconstructive Dentistry" class="aboutIconIMG">
+                    <h3 class="aboutTitle">Reconstructive Dentistry</h3>
                     <p class="aboutParagraph">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit rerum fugit dignissimos!
+                        Dental prostheses are rehabilitation treatments that allow the replacement of teeth and molars.
                     </p>
                 </article>
 
                 <article class="aboutIcons">
-                    <i class='aboutIconIMG bx bx-code'></i>
-                    <h3 class="aboutTitle">Sass</h3>
+                    <img src="imgs/children.png" alt="Children's Dentistry" class="aboutIconIMG">
+                    <h3 class="aboutTitle">Children's Dentistry</h3>
                     <p class="aboutParagraph">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat odit rerum fugit dignissimos!
+                        Pediatric dentistry is the branch of dentistry responsible for treating children.
                     </p>
                 </article>
             </section>
