Prices section done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -124,42 +124,43 @@
         <!-- ---------------------- Prices --------------------- -->
 
         <section id="Prices" class="priceContainer">
-            <h2 class="sectionTitle">Obten el plan perfecto para aprender</h2>
+            <h2 class="sectionTitle">Get the perfect plan for you</h2>
+
             <div class="priceTable">
                 <div class="priceElement">
-                    <p class="planName">Flexbox</p>
-                    <h3 class="planPrice">Free</h3>
+                    <p class="planName">Standard Plan</p>
+                    <h3 class="planPrice">$100/month</h3>
 
                     <div class="planItems">
-                        <p class="planFeatures">Flexbox</p>
-                        <p class="planFeatures">Layouts</p>
-                        <p class="planFeatures">Responsive</p>
+                        <p class="planFeatures">Porcelain veneers</p>
+                        <p class="planFeatures">Cosmetic reconstructions</p>
+                        <p class="planFeatures">Full smile design</p>
                     </div>
-                    <a href="" class="planCTA">Empieza ahora</a>
+                    <a href="" class="planCTA">Start Now</a>
                 </div>
 
-                <div class="priceElement priceBest">
-                    <p class="planName">Grid</p>
-                    <h3 class="planPrice">$30/mes</h3>
+                <div class="priceBest">
+                    <p class="planName">Complete Plan</p>
+                    <h3 class="planPrice">$300/month</h3>
 
                     <div class="planItems">
-                        <p class="planFeatures">Grid</p>
-                        <p class="planFeatures">Implicit Grid</p>
-                        <p class="planFeatures">Responsive</p>
+                        <p class="planFeatures">Fixed Dental Prostheses</p>
+                        <p class="planFeatures">Removable Dental Prostheses</p>
+                        <p class="planFeatures">Dentures</p>
                     </div>
-                    <a href="" class="planCTA">Empieza ahora</a>
+                    <a href="" class="planCTA">Start Now</a>
                 </div>
 
                 <div class="priceElement">
-                    <p class="planName">Animaciones</p>
-                    <h3 class="planPrice">$40/mes</h3>
+                    <p class="planName">Plus Plan</p>
+                    <h3 class="planPrice">$400/month</h3>
 
                     <div class="planItems">
-                        <p class="planFeatures">Animation</p>
-                        <p class="planFeatures">Transition</p>
-                        <p class="planFeatures">Render Website</p>
+                        <p class="planFeatures">Dental cleanings</p>
+                        <p class="planFeatures">Preventive orthodontics</p>
+                        <p class="planFeatures">Fluoride Applications</p>
                     </div>
-                    <a href="" class="planCTA">Empieza ahora</a>
+                    <a href="" class="planCTA">Start Now</a>
                 </div>
             </div>
         </section>
