Testimony section done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -174,15 +174,11 @@
 
                 <section class="testimonyBody testimonyBodyShow" data-id="1">
                     <div class="testimonyTexts">
-                        <h2 class="sectionTitle">Mi nombre es Yakelin Cortez,
-                            <span class="testimonyCourse">
-                                estudiante de CSS
-                            </span>
+                        <h2 class="sectionTitle">
+                            Charlotte Wright
                         </h2>
                         <p class="testimonyReview">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas
-                            necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus
-                            minima tempore ipsum, dolore similique.
+                            Great dental place. As soon as I walked in I felt like they had my best interest in mind. Definitely would recommend this place to everyone. Front desk and all assistants are all very friendly
                         </p>
                     </div>
                     <figure class="testimonyPicture">
@@ -192,15 +188,10 @@
 
                 <section class="testimonyBody " data-id="2">
                     <div class="testimonyTexts">
-                        <h2 class="sectionTitle">Mi nombre es Rodrigo Lopez,
-                            <span class="testimonyCourse">
-                                estudiante de CSS
-                            </span>
+                        <h2 class="sectionTitle">William Wood
                         </h2>
                         <p class="testimonyReview">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas
-                            necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus
-                            minima tempore ipsum, dolore similique.
+                            Great dental place. As soon as I walked in I felt like they had my best interest in mind. Definitely would recommend this place to everyone. Front desk and all assistants are all very friendly
                         </p>
                     </div>
                     <figure class="testimonyPicture">
@@ -210,15 +201,10 @@
 
                 <section class="testimonyBody " data-id="3">
                     <div class="testimonyTexts">
-                        <h2 class="sectionTitle">Mi nombre es Antonio Nieto,
-                            <span class="testimonyCourse">
-                                estudiante de CSS
-                            </span>
+                        <h2 class="sectionTitle">Thomas Walker
                         </h2>
                         <p class="testimonyReview">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas
-                            necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus
-                            minima tempore ipsum, dolore similique.
+                            Great dental place. As soon as I walked in I felt like they had my best interest in mind. Definitely would recommend this place to everyone. Front desk and all assistants are all very friendly
                         </p>
                     </div>
                     <figure class="testimonyPicture">
@@ -228,15 +214,11 @@
 
                 <section class="testimonyBody " data-id="4">
                     <div class="testimonyTexts">
-                        <h2 class="sectionTitle">Mi nombre es Rosario Ayala,
-                            <span class="testimonyCourse">
-                                estudiante de CSS
-                            </span>
+                        <h2 class="sectionTitle">
+                            Emma Robinson
                         </h2>
                         <p class="testimonyReview">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab illo dolor ratione voluptas
-                            necessitatibus natus porro labore, odio sed, eius explicabo non eligendi vitae temporibus
-                            minima tempore ipsum, dolore similique.
+                            Great dental place. As soon as I walked in I felt like they had my best interest in mind. Definitely would recommend this place to everyone. Front desk and all assistants are all very friendly
                         </p>
                     </div>
                     <figure class="testimonyPicture">
