FAQ section done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -236,7 +236,7 @@
 
         <section id="Questions" class="Question Container">
             <h2 class="sectionTitle">
-                Preguntas frecuentes
+                Frequent questions
             </h2>
             <p class="questionParagraph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum aperiam laborum odit tenetur sunt
@@ -248,16 +248,14 @@
                 <article class="questionPadding">
                     <div class="questionAnswer">
                         <h3 class="questionTitle">
-                            Que es CSS?
+                            How does the treatment work?
                             <span class="questionArrow">
                                 <i id="questionIMG" class='bx bxs-chevron-up'></i>
 
                             </span>
                         </h3>
                         <p class="questionShow">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repudiandae, voluptates
-                            minima eaque asperiores ipsa totam consequuntur perspiciatis modi fugiat doloremque optio
-                            neque quam debitis alias necessitatibus quidem exercitationem soluta?
+                            The Solea laser gently tightens the tissue in your soft palate, reducing vibrations that cause you to snore. The procedure is non-surgical, meaning that no tissue is cut during the procedure.
                         </p>
                     </div>
                 </article>
@@ -265,15 +263,13 @@
                 <article class="questionPadding">
                     <div class="questionAnswer">
                         <h3 class="questionTitle">
-                            Que aprendere en este curso
+                            What will I feel during the procedure?
                             <span class="questionArrow">
                                 <i id="questionIMG" class='bx bxs-chevron-up'></i>
                             </span>
                         </h3>
                         <p class="questionShow">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repudiandae, voluptates
-                            minima eaque asperiores ipsa totam consequuntur perspiciatis modi fugiat doloremque optio
-                            neque quam debitis alias necessitatibus quidem exercitationem soluta?
+                            Most patients elect to be treated with a topical anesthetic spray prior to the procedure. This will reduce or eliminate the feeling of heat that you may experience in the areas being treated and will also reduce your gag reflex. The topical anesthetic will wear off before you leave the office, so you don’t need to worry about going home numb. The procedure takes only 5 minutes to perform, and you can return to your normal routine immediately afterward.
                         </p>
                     </div>
                 </article>
@@ -281,34 +277,20 @@
                 <article class="questionPadding">
                     <div class="questionAnswer">
                         <h3 class="questionTitle">
-                            Que es CSS GRID?
+                            What will I feel after the procedure?
                             <span class="questionArrow">
                                 <i id="questionIMG" class='bx bxs-chevron-up'></i>
                             </span>
                         </h3>
                         <p class="questionShow">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat repudiandae, voluptates
-                            minima eaque asperiores ipsa totam consequuntur perspiciatis modi fugiat doloremque optio
-                            neque quam debitis alias necessitatibus quidem exercitationem soluta?
+                            You may feel mild irritation in the treatment area for one to two days after the procedure. Occasionally, patients experience isolated spots of mild ulceration, similar to a pizza burn, that lasts for a few days. You should begin to see improvement in the frequency and volume of your snoring in the first week after treatment.
                         </p>
                     </div>
                 </article>
 
             </section>
 
-            <section class="startContainer">
-                <h3 class="sectionTitle">Estas listo para aprender CSS
-
-                </h3>
-                <p class="startParagraph">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam id perferendis doloremque impedit
-                    quia unde magnam, recusandae consequatur ad placeat mollitia sapiente fugit natus, odit nisi
-                    doloribus nam, voluptatibus rem?
-                </p>
-                <a class="startNow">
-                    Entrar ahora
-                </a>
-            </section>
+            
         </section>
 
         <!-- ---------------------- Footer --------------------- -->
