Footer section done

--- a/LadingPageOne/index.html
+++ b/LadingPageOne/index.html
@@ -36,10 +36,10 @@
                     <a class="navLink" href="#Prices">Prices</a>
                 </li>
                 <li class="navItem">
-                    <a class="navLink" href="#Testimony">Testimony</a>
+                    <a class="navLink" href="#Testimony">Testimonials</a>
                 </li>
                 <li class="navItem">
-                    <a class="navLink" href="#Questions">Questions</a>
+                    <a class="navLink" href="#Questions">FAQ</a>
                 </li>
 
                 <i id="navClose" class="bx bxs-x-circle"></i>
@@ -298,27 +298,35 @@
         <section class="footer">
             <section class="footerHead">
                 <article class="LinksContainer">
-                    <h3 class="sectionTitle linksTitle">Cursos de CSS</h3>
+                    <h3 class="sectionTitle linksTitle">Dental Clinic</h3>
                     <div class="links">
                         <a class="link" href="#">
-                            Inicio
+                            Home
                         </a>
                         <a class="link" href="#">
-                            Acerca de
+                            About
                         </a>
                         <a class="link" href="#">
-                            Contacto
+                            Services
                         </a>
                         <a class="link" href="#">
-                            Blog
+                            Prices
+                        </a>
+                        <a class="link" href="#">
+                            Testimonials
+                        </a>
+                        <a class="link" href="#">
+                            FAQ
                         </a>
                     </div>
                 </article>
                 <article class="subscribeContainer">
-                    <h3 class="subscribeTitle">Suscribete a la newsletter</h3>
+                    <h3 class="subscribeTitle">
+                        Subscribe to the newsletter
+                    </h3>
                     <form class="subscribeForm">
                         <input class="inputNewsletter" type="text" placeholder="Email">
-                        <button class="btnNewsletter">Registrate</button>
+                        <button class="btnNewsletter">Sign up</button>
                     </form>
                 </article>
             </section>
@@ -330,7 +338,7 @@
 
                 </div>
                 <h3 class="copyRights">
-                    Derechos reservados &#169; Francisco Cortez
+                    All rights reserved &#169; Dental Clinic
                 </h3>
             </section>
         </section>
