Fix picture of service section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <section class="aboutMain">
 
         <article class="aboutIcons">
-          <img src="imgs/plastic.png" alt="Plastic surgery" class="aboutIconIMG">
+          <img src="./Imgs/plastic.png" alt="Plastic surgery" class="aboutIconIMG">
           <h3 class="aboutTitle">Plastic surgery</h3>
           <p class="aboutParagraph">
             Aesthetic dentistry could be defined as an application of art and science aimed at developing or enhancing
