Paths of service section fixed

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </article>
 
         <article class="aboutIcons">
-          <img src="imgs/reconstructive.png" alt="Reconstructive Dentistry" class="aboutIconIMG">
+          <img src="./Imgs/reconstructive.png" alt="Reconstructive Dentistry" class="aboutIconIMG">
           <h3 class="aboutTitle">Reconstructive Dentistry</h3>
           <p class="aboutParagraph">
             Dental prostheses are rehabilitation treatments that allow the replacement of teeth and molars.
@@ -117,7 +117,7 @@
         </article>
 
         <article class="aboutIcons">
-          <img src="imgs/children.png" alt="Children's Dentistry" class="aboutIconIMG">
+          <img src="./Imgs/children.png" alt="Children's Dentistry" class="aboutIconIMG">
           <h3 class="aboutTitle">Children's Dentistry</h3>
           <p class="aboutParagraph">
             Pediatric dentistry is the branch of dentistry responsible for treating children.
